<resources>
    <string name="app_name">LearnYourself</string>
    <string name="register">Registrarse</string>
    <string name="r_title">Vamos a crear tu cuenta</string>
    <string name="login">Ingresar</string>
    <string name="l_txtl">Ingrese su usuario:</string>
    <string name="l_txtpass">Ingrese su contraseña:</string>
    <string name="l_recoveryPass">¿Has olvidado tu contraseña?</string>
    <string name="re_title">Recuperemos tu contraseña</string>
    <string name="reserved">Todos los derechos reservados</string>
    <string name="re_btn">Recuperar contraseña</string>
    <string name="r_legend">    Es el momento de crear tu cuenta para obtener tu plan de aprendizaje y guardar tu progreso</string>
    <string name="courses_title">Todos nuestros cursos disponibles al alcance de tu mano.</string>
    <string name="Phyton">Phyton</string>
    <string name="textButton">Ir al Curso</string>
    <string name="Java">Java</string>
    <string name="Javascript">Javascript</string>
    <string name="PHP">PHP</string>
    <string name="HTML">HTML</string>
    <string name="MySQL">MySQL</string>
    <string name="TextDown">Domina la programacion profesional con nuestra gran variedad de cursos. </string>
    <string name="buttonBack">Volver</string>
    <string name="javascript">JavaScript</string>
    <string name="java">Java</string>
    <string name="mysql">Mysql</string>
    <string name="php">Php</string>
    <string name="piton">Python</string>
    <string name="p_title">Bienvenido a tu perfil</string>
    <string name="p_name">Cambia tu nombre.</string>
    <string name="p_lastName">Cambia tu apellido.</string>
    <string name="p_password">Cambia tu contraseña.</string>
    <string name="p_courses">Tus cursos</string>
    <string name="disponible">Aun no te has inscripto a ningun curso.</string>
    <string name="p_change">"Cambiar "</string>
    <string name="javaDescripcion">Master Completo de Java de 0 a experto(+127 hrs)</string>
    <string name="introduccion">Seccion 1: Introduccion</string>
    <string name="Variables">Seccion 2: Variables</string>
    <string name="operadores">Seccion 3: Operadores</string>
    <string name="flujos">Seccion 4: Flujos de Control</string>
    <string name="system">Seccion 5: La clase System</string>
    <string name="math">Seccion 6: La clase Math</string>
    <string name="array">Seccion 7: Arreglos</string>
    <string name="Bidimensionales">Seccion 8: Arreglos Bidimensionales</string>
    <string name="poo">Seccion 9: Programacion Orientada a Objetos</string>
    <string name="Sobrecarga">Seccion 10: Sobrecarga de metodos</string>
    <string name="herencia">Seccion 11: herencia</string>
    <string name="interfaces">Seccion 12: Interfaces</string>
    <string name="exepciones">Seccion 13: Manejo de Exepciones</string>
    <string name="finalJava">Las principales empresas eligen LearnYourSelf para desarrollar sus habilidades demandadas</string>
    <string name="empezar">Empezar</string>
    <string name="phpDescripcion">Master Completo en PHP de 0 a experto(+130 hrs)</string>
    <string name="variablesPHP">Seccion 3: Variables en PHP</string>
    <string name="phpPrimerospasos">Seccion 2: Primeros pasos en PHP</string>
    <string name="ConstantesPHP">Seccion 4: Constantes</string>
    <string name="operadoresPHP">Seccion 5: Operadores en PHP</string>
    <string name="oCondicionalesPHP">Seccion 6: Condicionales en PHP</string>
    <string name="IteradoesBuclesPHP">Seccion 7: Iteradores y Bucles PHP</string>
    <string name="FuncionesPHP">Seccion 8: Funciones en PHP</string>
    <string name="ArraysArreglosPHP">Seccion 9: Arrays y Arreglos en PHP</string>
    <string name="SesionesPHP">Seccion 10: Sesiones y Cookies en PHP</string>
    <string name="FormulariosPHP">Seccion 11: Formularios con PHP</string>
    <string name="ValidacionesPHP">Seccion 12: Validaciones con PHP</string>
    <string name="cambiarImagen">Cambiar Imagen</string>
    <string name="sqlDescripcion">Master Completo de MySql de 0 a experto(+180 hrs)</string>
    <string name="variablesSql">Seccion 2: Obteniendo datos</string>
    <string name="Insertsql">Seccion 3: Insert,Update y Delete</string>
    <string name="AgrupacionesSql">Seccion 4: Agrupaciones</string>
    <string name="JoinsSql">Seccion 5: Joins</string>
    <string name="funcionesSql">Seccion 6: Funciones</string>
    <string name="VistasSql">Seccion 7: Vistas</string>
    <string name="ProcedimientosSql">Seccion 8: Procedimientos</string>
    <string name="TriggersSql">Seccion 9: Triggers</string>
    <string name="TransaccionesSql">Seccion 10: Transacciones y Concurrencias</string>
    <string name="IndicesSql">Seccion 11: Indices</string>
    <string name="SeguridadSql">Seccion 12: Seguridad en base de datos</string>
    <string name="javascriptDescripcion">Master Completo de Javascript de 0 a experto(+150 hrs)</string>
    <string name="variablesjavascript">Seccion 2: Variables en JavaScript</string>
    <string name="sctJavascript">Seccion 3: String o Cadenas de Texto</string>
    <string name="numerosScript">Seccion 4: Numeros en JavaScript</string>
    <string name="operadoresJavascript">Seccion 5: Operadores en JavaScript</string>
    <string name="objetosJavacript">Seccion 6: Objetos en JavaScript</string>
    <string name="booleanJavascript">Seccion 7: Booleans en JavaScript</string>
    <string name="arraysJavascript">Seccion 8: Arrays o Arreglos en JavaScript</string>
    <string name="funcionesJavascript">Seccion 9: Funciones en JavaScript</string>
    <string name="estructurasJavascript">Seccion 10: Estructuras de Control</string>
    <string name="PhytonDescripcion">Master Completo de Phyton de 0 a experto(+170 hrs)</string>
    <string name="variablesPhyton">Seccion 2: Variables en Phyton</string>
    <string name="datosPhyton">Seccion 3: Tipos de datos en Phyton</string>
    <string name="OperadoresPhyton">Seccion 4: Operadores en Phyton</string>
    <string name="CiclosPhyton">Seccion 5: Ciclos en Phyton</string>
    <string name="ColeccionesPhyton">Seccion 6: Colecciones en Phyton</string>
    <string name="phytonFunciones">Seccion 7: Funciones en Phyton</string>
    <string name="EncapsulamientoPhyton">Seccion 8: Encapsulamiento</string>
    <string name="HerenciaPhyton">Seccion 9: Herencia</string>
    <string name="AbstractasPhyton">Seccion 10: Clases Abstractas</string>
    <string name="PolimorfismoPhyton">Seccion 11: Polimorfismo</string>
    <string name="ExcepcionesPhyton">Seccion 12: Manejo de Excepciones</string>
    <string name="..">final</string>
    <string name="...">final</string> 
    <string name="cambiarImagen">Cambiar Imagen</string>
    <string name="phpDescripcion">Master Completo de PHP de 0 a experto(+130 hrs)</string>
    <string name="phpvariables">Seccion 2: Variables y tipos de datos</string>
    <string name="phpoperadores">Seccion 3: Operadores</string>
    <string name="phpeccondicionales">Seccion 4: Estructura de control</string>
    <string name="phpfunciones">Seccion 5: Funciones </string>
    <string name="phpincludes">Seccion 6: Includes</string>
    <string name="phpArrays">Seccion 7: Arrays y Arreglos</string>
    <string name="phpcookies">Seccion 8: Sesiones y Cookies</string>
    <string name="phpformularios">Seccion 9: Formularios</string>
    <string name="phpvalidaciones">Seccion 10: Validacion de formularios</string>
    <string name="phpsistemas">Seccion 11: Sistema de archivos</string>
    <string name="phpsubidas">Seccion 12: Subidas de archivos</string>
    <string name="phpejercicios">Seccion 13: Ejercicios de desarrollo Web con PHP</string>
    <string name="VariablesPhyton">Seccion 2: Variables de Phyton</string>
    <string name="DatosPhyton">Seccion 3: Tipos de Datos Phyton</string>
    <string name="OperadoresPhyton">Seccion 4: Operadores Phyton</string>
    <string name="SentenciasPhyton">Seccion 5: Sentencias Phyton</string>
    <string name="CiclosPhyton">Seccion 6: Ciclos de Phyton</string>
    <string name="ColeccionesPhyton">Seccion 7: Colecciones en Phyton</string>
    <string name="FuncionesPhyton">Seccion 8: Funciones en Phyton</string>
    <string name="CyObjetosPhyton">Seccion 9: Clases y Objetos Phyton</string>
    <string name="EncapsulamientoPhyton">Seccion 10: Encapsulamiento Phyton</string>
    <string name="HernciaPhyton">Seccion 11: Herencia Phyton</string>
    <string name="CAbstractasPhyton">Seccion 12: Clases Abstractas Phyton</string>
    <string name="SobrecargaPhyton">Seccion 13: Sobrecarga de operadores en Phyton</string>
 

 

</resources>