<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Php">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/titleContent"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/bgColor"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/c_logo"
                    android:layout_width="217dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/logo" />

                <TextView
                    android:id="@+id/c_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:padding="5dp"
                    android:paddingEnd="100dp"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="181dp"
                app:srcCompat="@drawable/mysql" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MySQL"
                android:textAlignment="center"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqlDescripcion"
                android:textSize="24sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="260dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView63"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/introduccion"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView64"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/variablesSql"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView65"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Insertsql"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView66"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/AgrupacionesSql"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView67"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/JoinsSql"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView68"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/funcionesSql"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView69"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/VistasSql"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView70"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ProcedimientosSql"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView71"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/TriggersSql"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView72"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/TransaccionesSql"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/IndicesSql"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/SeguridadSql"
                        android:textSize="20sp" />

                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@color/btnColor"
                    android:onClick="empezar"
                    android:text="@string/empezar"
                    android:textColor="@color/txtColor" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/btnColor"
                    android:onClick="volver"
                    android:text="@string/buttonBack"
                    android:textColor="@color/txtColor" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="dowload"
                    android:padding="5dp"
                    android:text="@string/cambiarImagen" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>